# Indie-Studio

./: CMakeLists.txt  README.md  lunch_irr.sh  main.cpp  save1.txt
assets/: map.txt
assets/BOMB/: lien assets
assets/BOMBERMAN/: bomberMan.max
assets/Map/: random_map.txt
assets/Score/: score.txt
assets/map/: random_map.txt
assets/models/bomb/: a bomb tex.tga  a_bomb.fbx
assets/models/bonus/: ball_01.fbx  ball_01.tga  ball_02.fbx  ball_02.tga  ball_03.fbx  ball_03.tga
assets/textures/: Regular_Bomb_Low_Poly.dae  chara1_idle.MD3  chara1_walk.MD3  chara2_idle.MD3  chara2_walk.MD3  chara3_idle.MD3  chara3_walk.MD3  chara4_walk.MD3  fire.tga  rock.tga  sand.tga  wood.tga
assets/textures/Block/: ghost.mtl  hatenablock.mtl
bonus/sfbomber/: Makefile  map.txt
bonus/sfbomber/include/: Animation.hpp  Bomb.hpp  BreakableWall.hpp  Explosion.hpp  Game.hpp  GameObject.hpp  Ground.hpp  MainLoop.hpp  Player.hpp  Powerup.hpp  SolidWall.hpp  Structs.hpp
bonus/sfbomber/src/: Animation.cpp  Bomb.cpp  BreakableWall.cpp  Explosion.cpp  Game.cpp  Ground.cpp  MainLoop.cpp  Player.cpp  Powerup.cpp  SolidWall.cpp  main.cpp
include/: AObject.hpp  APlayer.hpp  Bomb.hpp  BreakableWall.hpp  Core.hpp  Credit.hpp  Empty.hpp  Engine.hpp  Event.hpp  Exception.hpp  Explosion.hpp  Factory.hpp  Floor.hpp  Game.hpp  GameObject.hpp  GeneratorMap.hpp  Ground.hpp  HowTo.hpp  IModule.hpp  LeaderBoard.hpp  Load.hpp  Map.hpp  Menu.hpp  Normal.hpp  Obstacle.hpp  Player.hpp  Powerup.hpp  Rect.hpp  Save.hpp  Settings.hpp  SolidWall.hpp  Song.hpp  Sound.hpp  Wall.hpp
sfbomber/: Makefile
sfbomber/include/: Animation.hpp  Bomb.hpp  BreakableWall.hpp  Explosion.hpp  Game.hpp  GameObject.hpp  Ground.hpp  Player.hpp  SolidWall.hpp
sfbomber/src/: Bomb.cpp  BreakableWall.cpp  Explosion.cpp  Game.cpp  Ground.cpp  Player.cpp  SolidWall.cpp  main.cpp
src/: AObject.cpp  Core.cpp  Factory.cpp  Game.cpp  GeneratorMap.cpp  Map.cpp  Menu.cpp  Normal.cpp  Wall.cpp  main.cpp
src/Map/: GeneratorMap.cpp  Map.cpp
src/Module/: Core.cpp  Credit.cpp  Game.cpp  HowTo.cpp  LeaderBoard.cpp  Load.cpp  Menu.cpp  Settings.cpp  Song.cpp
src/Object/: AObject.cpp  Bomb.cpp  BreakableWall.cpp  Empty.cpp  Explosion.cpp  Floor.cpp  Ground.cpp  Obstacle.cpp  Powerup.cpp  SolidWall.cpp  Wall.cpp
src/Player/: APlayer.cpp  Normal.cpp  Player.cpp
src/Sound/: Sound.cpp
